<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView

        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <!--General info-->
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="@dimen/cardview_elevation">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/iv_movie_poster"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/movie_poster_description"
                        android:scaleType="fitStart"
                        tools:src="@drawable/movie_poster" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:padding="@dimen/space_normal">

                        <TextView
                            android:id="@+id/tv_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:ellipsize="end"
                            android:maxLines="4"
                            android:textSize="@dimen/text_size_big"
                            android:textStyle="bold"
                            tools:text="Wonder woman" />

                        <TextView
                            android:id="@+id/tv_release_date"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/space_normal"
                            android:textSize="@dimen/text_size_normal"
                            tools:text="Released in: 2017" />

                        <TextView
                            android:id="@+id/tv_vote_average"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/space_normal"
                            android:textSize="@dimen/text_size_normal"
                            tools:text="Rating: 7.2/10" />

                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>


            <!--Overview-->
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_normal"
                app:cardElevation="@dimen/cardview_elevation">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingBottom="@dimen/space_small"
                    android:paddingLeft="@dimen/space_normal"
                    android:paddingRight="@dimen/space_normal"
                    android:paddingTop="@dimen/space_small">

                    <TextView
                        style="@style/MovieDetailSectionTilte"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/movie_overview" />

                    <TextView
                        android:id="@+id/tv_overview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/space_small"
                        android:textSize="@dimen/text_size_normal"
                        tools:text="@string/dummy_overview" />


                </LinearLayout>

            </android.support.v7.widget.CardView>


            <!--Trailers-->
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_normal"
                app:cardElevation="@dimen/cardview_elevation">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingBottom="@dimen/space_small"
                    android:paddingLeft="@dimen/space_normal"
                    android:paddingRight="@dimen/space_normal"
                    android:paddingTop="@dimen/space_small">

                    <TextView
                        android:id="@+id/tv_trailers_title"
                        style="@style/MovieDetailSectionTilte"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/space_normal"
                        android:text="@string/movie_trailers" />

                    <GridLayout
                        android:id="@+id/gl_movie_trailers"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/tv_no_trailers"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/message_no_trailers"
                        android:textSize="@dimen/text_size_normal"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/tv_no_internet_trailers"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/message_no_internet_connection"
                        android:textSize="@dimen/text_size_normal"
                        android:textStyle="bold"
                        android:visibility="gone" />

                </LinearLayout>
            </android.support.v7.widget.CardView>


            <!--Reviews-->
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_normal"
                app:cardElevation="@dimen/cardview_elevation">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingBottom="@dimen/space_small"
                    android:paddingLeft="@dimen/space_normal"
                    android:paddingRight="@dimen/space_normal"
                    android:paddingTop="@dimen/space_small">

                    <TextView
                        android:id="@+id/tv_reviews_title"
                        style="@style/MovieDetailSectionTilte"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/movie_reviews" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/space_normal">

                        <!--No internet-->
                        <LinearLayout
                            android:id="@+id/ll_no_internet_reviews"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:padding="@dimen/space_small"
                            android:visibility="gone">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:text="@string/message_no_internet_connection"
                                android:textSize="@dimen/text_size_normal"
                                android:textStyle="bold" />

                            <Button
                                android:id="@+id/btn_retry_reviews"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/button_no_internet_connection" />

                        </LinearLayout>

                        <!--No reviews-->
                        <TextView
                            android:id="@+id/tv_no_reviews"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:gravity="center"
                            android:text="@string/message_no_reviews"
                            android:textSize="@dimen/text_size_normal"
                            android:visibility="gone" />

                        <!--Reviews-->
                        <LinearLayout
                            android:id="@+id/ll_movie_reviews"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:paddingLeft="@dimen/space_small"
                            android:paddingRight="@dimen/space_small" />

                        <ProgressBar
                            android:id="@+id/pb_reviews_loading"
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:layout_centerInParent="true" />

                    </RelativeLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>
    </ScrollView>


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_save_movie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_margin="@dimen/space_normal"
        android:src="@drawable/ic_action_save_movie"
        app:elevation="6dp"
        app:fabSize="normal"
        app:pressedTranslationZ="12dp"
        app:rippleColor="@android:color/transparent" />

</RelativeLayout>